# spython

./: .gitignore  .gitmodules  CLAUDE.md  COMPILER.md  Cargo.toml  LICENSE  Makefile  README.md  deno.json  ruff.toml  spython  typeshed_allowlist.txt
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
cli/: Cargo.toml  config.rs  main.rs  overlay_system.rs  repl.rs
cli/tests/: cli.rs
cli/tests/check_inputs/: doctest_bare_name.py  doctest_continuation_no_space.py  doctest_level_restriction.py  doctest_module_level.py  doctest_no_space.py  doctest_syntax_error.py  doctest_type_error.py  ok.py  spython_lib_type_error.py  spython_wildcard_ok.py  spython_wildcard_unresolved.py
cli/tests/check_inputs/doctest_cross_module/: main.py
cli/tests/images/: above1.py  above_align1.py  above_align2.py  above_variadic1.py  add_curve1.py  add_curve2.py  add_curve3.py  add_line1.py  add_line2.py  add_line3.py  add_polygon1.py  add_polygon2.py  add_polygon3.py  add_solid_curve1.py  add_wedge1.py  beside1.py  beside_align1.py  beside_align2.py  beside_variadic1.py  circle1.py  circle2.py  crop1.py  crop2.py  crop3.py  crop_align1.py  crop_align2.py  crop_align3.py  crop_align4.py  dash1.py  dash2.py  dash3.py  ellipse1.py  ellipse2.py  empty_scene1.py  flip_horizontal1.py  flip_vertical1.py  frame1.py  frame2.py  isosceles_triangle1.py  isosceles_triangle2.py  (+99 more)
cli/tests/inputs/: err_annotation_in_deep_import.py  err_annotation_in_nested_import.py  err_missing_args_annotation.py  err_missing_class_attr.py  err_missing_return_annotation.py  err_type.py  err_type_mixed.py  ok_class.py
cli/tests/inputs/test_package/: __init__.py
cli/tests/inputs/test_package/subpackage/nested/: deep_module.py
cli/tests/snapshots/: cli__check_doctest_continuation_no_space.snap  cli__check_doctest_level_restriction.snap  cli__check_doctest_module_level.snap  cli__check_doctest_no_space.snap  cli__check_doctest_syntax_error.snap  cli__check_doctest_type_error.snap  cli__check_spython_lib_type_error.snap  cli__check_spython_wildcard_unresolved.snap  cli__run_files@err_annotation_in_nested_import.py.snap  cli__run_files@err_missing_kwargs_annotation.py.snap  cli__run_files@err_type.py.snap  cli__run_files@ok_class.py.snap  cli__run_files@ok_simple.py.snap  cli__run_images@above1.py.snap  cli__run_images@above_align1.py.snap  cli__run_images@above_align2.py.snap  cli__run_images@above_variadic1.py.snap  cli__run_images@add_curve1.py.snap  cli__run_images@add_curve2.py.snap  cli__run_images@add_curve3.py.snap  cli__run_images@add_line1.py.snap  cli__run_images@add_line2.py.snap  cli__run_images@add_line3.py.snap  cli__run_images@add_polygon1.py.snap  cli__run_images@add_polygon2.py.snap  cli__run_images@add_polygon3.py.snap  cli__run_images@add_solid_curve1.py.snap  cli__run_images@add_wedge1.py.snap  cli__run_images@beside1.py.snap  cli__run_images@beside_align1.py.snap  cli__run_images@beside_align2.py.snap  cli__run_images@beside_variadic1.py.snap  cli__run_images@circle1.py.snap  cli__run_images@circle2.py.snap  cli__run_images@crop1.py.snap  cli__run_images@crop2.py.snap  cli__run_images@crop3.py.snap  cli__run_images@crop_align1.py.snap  cli__run_images@crop_align2.py.snap  cli__run_images@crop_align3.py.snap  (+112 more)
compiler/: Cargo.toml
compiler/src/: codegen.rs  compile.rs  lib.rs  test_set.rs  types.rs
compiler/tests/: e2e.rs  integration.rs  level0.rs  level1.rs  level2.rs  level3.rs  level4.rs  level5.rs
compiler/tests/integration/level0/: capitalize_first.py  censor.py  digits.py  double.py  fare_exempt.py  hypotenuse.py  increase.py  iron_pipe_mass.py  name_check.py  new_century.py  no_edge_spaces.py  reformat_date.py  rotate_right.py  tile_count.py  trip_cost.py  zero_last_digits.py
compiler/tests/integration/level1/: add_period.py  adjust_phone.py  center.py  clamp.py  doubled_word.py  fuel_choice.py  investment.py  maximum.py  resize_string.py  sign.py
compiler/tests/integration/level2/: direction.py  duration.py  fuel.py  lottery.py  match_binding.py  match_list.py  match_mixed.py  match_nested.py  match_struct.py  match_tuple.py  max_steps.py  resolution.py  rock_paper_scissors.py  season.py  soccer.py  traffic_light.py  window.py
compiler/tests/integration/level3/: all_false.py  avg_length.py  bounding_box.py  championship.py  concatenate.py  count_zeros.py  doubled_list.py  even_odd.py  factorial.py  factorial_rec.py  find_starts_a.py  frequency.py  in_order.py  insert_at.py  insert_sorted.py  list_maximum.py  list_sum.py  lottery_list.py  majority.py  max_index.py  negatives_first.py  new_position.py  non_decreasing.py  palindrome.py  passing_students.py  pi_series.py  power.py  prime.py  recursive_max.py  regular_matrix.py  remove_at.py  remove_zeros.py  reverse.py  sum_naturals.py  sum_recursive.py  transpose.py  zero_matrix.py
compiler/tests/testlib/: mod.rs
docs/en/: cli.md  index-cli.md  index-web.md  web.md
docs/pt-br/: cli.md  index-cli.md  index-web.md  web.md
engine/: Cargo.toml  build.rs
engine/src/: checker.rs  completion.rs  doctest_runner.py  doctests.rs  drawlist.rs  lib.rs  lints.rs  output.rs  panic.rs  spython_lib.rs  wasm_ffi.rs
engine/src/host/: mod.rs  native.rs  wasm.rs
examples/: move_square.py
lib/spython/: __init__.py  color.py  font.py  image.py  style.py  system.py  world.py
scripts/: find_stdlib_deps.py
spython-core/: Cargo.toml
spython-core/src/: checker.rs  doctest_runner.py  lib.rs  lints.rs  wasm_ffi.rs
src/: checker.rs  main.rs
tests/: cli.rs
tests/check_inputs/: fail.py
tests/images/: above1.py  above_align1.py  add_line1.py  add_polygon1.py  beside1.py  beside_align1.py  circle1.py  crop1.py  crop_align1.py  ellipse1.py  empty_scene1.py  flip_horizontal1.py  flip_vertical1.py  frame1.py  isosceles_triangle1.py  line1.py  overlay1.py  (+28 more)
wasm/: Cargo.toml  spython.ts
wasm/src/: lib.rs
wasm/tests/: deno.json  wasi.ts  wasm_test.ts
web/: ansi.ts  ansi_test.ts  channel_test.ts  env.ts  inline.ts  server.py  spython.html  test.ts  ui.ts  ui_channel.ts  wasi.ts  wasi_test.ts  worker.ts  worker_channel.ts
(+69 files in other folders)
