[workspace]
members = ["engine", "cli", "wasm"]
resolver = "3"

[patch.crates-io]
rustyline = { git = "https://github.com/malbarbo/rustyline.git" }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true

[profile.release-small]
inherits = "release"
opt-level = 's'
lto = true
codegen-units = 1
panic = "abort"
