[workspace]
members = ["engine", "cli", "wasm"]
default-members = ["engine", "cli"]
resolver = "3"

[patch.crates-io]
rustyline = { git = "https://github.com/malbarbo/rustyline.git" }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = 's'
panic = "abort"
