[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spython"
path = "main.rs"

[dependencies]
engine = { path = "../engine" }
bpaf = { version = "0.9", features = ["derive", "bright-color"] }
ty_project = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ruff_db = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1", features = ["os"] }
ruff_python_ast = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
rustpython-vm = { git = "https://github.com/malbarbo/RustPython.git", branch = "spython-0.1", default-features = false }
rustpython-compiler = { git = "https://github.com/malbarbo/RustPython.git", branch = "spython-0.1", default-features = false }
rustyline = "17.0.1"
dirs = { package = "dirs-next", version = "2.0" }
walkdir = "2"
dunce = "1"

[dev-dependencies]
assert_cmd = "2.0.16"
indoc = "2"
insta = { version = "1.41.1", features = ["glob", "filters"] }
