[package]
name = "compiler"
version = "0.2.0-dev"
edition = "2024"

[dependencies]
ruff_db = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ruff_python_ast = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ruff_python_parser = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ruff_text_size = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ty_project = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ty_python_semantic = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
walrus = { git = "https://github.com/rustwasm/walrus.git", branch = "main" }

[dev-dependencies]
wasmtime = { version = "33.0.2", default-features = false, features = ["runtime", "cranelift", "gc", "gc-drc"] }
