[workspace]

[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ruff_python_ast = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ruff_python_parser = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
wasm-encoder = "0.230"

[dev-dependencies]
wasmtime = "31"
indoc = "2"
wasmprinter = "0.226"
wasmparser = "0.230"
