[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustpython = { git = "https://github.com/malbarbo/RustPython.git", branch = "spython-0.1", features = ["freeze-stdlib"] }

# On wasm32, drop features that don't work (host_env, threading, ssl).
[target.'cfg(target_arch = "wasm32")'.dependencies]
rustpython = { git = "https://github.com/malbarbo/RustPython.git", branch = "spython-0.1", default-features = false, features = ["freeze-stdlib", "stdio", "importlib"] }

[dependencies]
ty_project = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ty_python_semantic = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ty_module_resolver = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ruff_db = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ruff_python_ast = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ruff_text_size = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ruff_macros = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
ruff_python_formatter = { git = "https://github.com/malbarbo/ruff.git", branch = "spython-0.1" }
