[package]
name = "spython-core"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustpython = { path = "../crates/RustPython" }

# On wasm32 the stdlib can't be loaded from the filesystem, so it must be
# frozen (compiled-in) at build time. Also drop features that don't work on
# WASM (host_env, threading, ssl).
[target.'cfg(target_arch = "wasm32")'.dependencies]
rustpython = { path = "../crates/RustPython", default-features = false, features = ["freeze-stdlib", "stdio", "importlib"] }

[dependencies]
ty_project = { path = "../crates/ruff/crates/ty_project" }
ty_python_semantic = { path = "../crates/ruff/crates/ty_python_semantic" }
ty_module_resolver = { path = "../crates/ruff/crates/ty_module_resolver" }
ruff_db = { path = "../crates/ruff/crates/ruff_db" }
ruff_python_parser = { path = "../crates/ruff/crates/ruff_python_parser" }
ruff_python_ast = { path = "../crates/ruff/crates/ruff_python_ast" }
ruff_text_size = { path = "../crates/ruff/crates/ruff_text_size" }
ruff_macros = { path = "../crates/ruff/crates/ruff_macros" }
ruff_python_formatter = { path = "../crates/ruff/crates/ruff_python_formatter" }
